--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* .MuiStep-root.MuiStep-horizontal.css-1bw0nnu-MuiStep-root {
+.MuiStep-root.MuiStep-horizontal.css-1bw0nnu-MuiStep-root {
 	width: 0px;
 }
 
@@ -61,4 +61,4 @@
 .MuiOutlinedInput-root.MuiInputBase-root.MuiInputBase-colorPrimary.MuiInputBase-formControl.MuiInputBase-adornedStart.css-1q6at85-MuiInputBase-root-MuiOutlinedInput-root {
 	position: relative;
 	right: 92px;
-} */
+}
